--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-composability": "0.3.7",
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-font-awesome": "2.2.0",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.10"
